--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'TH'
 - !lcsh 'Fireplaces'
+- GITenberg
 title: Making a Fireplace
 url: http://www.gutenberg.org/ebooks/26670
